--- a/index.html
+++ b/index.html
@@ -24,14 +24,22 @@
     ></script>
 
     <!-- CSS Style Sheets-->
-    <link rel="stylesheet" href="/TinDog/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700;900&family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <section id="title">
       <!-- Nav Bar -->
 
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="">tindog</a>
         <button
           class="navbar-toggler"
@@ -60,14 +68,16 @@
       </nav>
 
       <!-- Title -->
+      <div class="row">
+        <div class="col-lg-6">
+          <h1>Meet new and interesting dogs nearby.</h1>
+          <button type="button">Download</button>
+          <button type="button">Download</button>
+        </div>
 
-      <div>
-        <h1>Meet new and interesting dogs nearby.</h1>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
-      </div>
-      <div>
-        <img src="images/iphone6.png" alt="iphone-mockup" />
+        <div class="col-lg-6">
+          <img src="images/iphone6.png" alt="iphone-mockup" />
+        </div>
       </div>
     </section>
 
