--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
       <!-- Fluid container to wrap title section content -->
       <div class="container-fluid">
         <!-- Nav Bar -->
-
         <nav class="navbar navbar-expand-lg navbar-dark">
           <a class="navbar-brand" href="">tindog</a>
           <button
@@ -110,14 +109,25 @@
     <!-- Features -->
 
     <section id="features">
-      <h3>Easy to use.</h3>
-      <p>So easy to use, even your dog could do it.</p>
+      <div class="row">
+        <div class="feature-box col-lg-4 col-sm-12">
+          <i class="feature-icon fa-solid fa-circle-check fa-4x"></i>
+          <h3>Easy to use.</h3>
+          <p>So easy to use, even your dog could do it.</p>
+        </div>
 
-      <h3>Elite Clientele</h3>
-      <p>We have all the dogs, the greatest dogs.</p>
+        <div class="feature-box col-lg-4 col-sm-12">
+          <i class="feature-icon fa-solid fa-bullseye fa-4x"></i>
+          <h3>Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
 
-      <h3>Guaranteed to work.</h3>
-      <p>Find the love of your dog's life or your money back.</p>
+        <div class="feature-box col-lg-4 col-sm-12">
+          <i class="feature-icon fa-solid fa-heart fa-4x"></i>
+          <h3>Guaranteed results.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
     </section>
 
     <!-- Testimonials -->
@@ -127,7 +137,11 @@
         I no longer have to sniff other dogs for love. I've found the hottest
         Corgi on TinDog. Woof.
       </h2>
-      <img src="images/dog-img.jpg" alt="dog-profile" />
+      <img
+        class="testimonial-image"
+        src="images/dog-img.jpg"
+        alt="dog-profile"
+      />
       <em>Pebbles, New York</em>
 
       <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
@@ -138,10 +152,14 @@
     <!-- Press -->
 
     <section id="press">
-      <img src="images/techcrunch.png" alt="tc-logo" />
-      <img src="images/tnw.png" alt="tnw-logo" />
-      <img src="images/bizinsider.png" alt="biz-insider-logo" />
-      <img src="images/mashable.png" alt="mashable-logo" />
+      <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
+      <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
+      <img
+        class="press-logo"
+        src="images/bizinsider.png"
+        alt="biz-insider-logo"
+      />
+      <img class="press-logo" src="images/mashable.png" alt="mashable-logo" />
     </section>
 
     <!-- Pricing -->
